--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* Global Reset for better sizing */
+* {
+  box-sizing: border-box;
+}
